2012-12-03  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: add a script encoding magic comment for ruby 2.0.0 preview2.
	    (github issue #25 reported by aboltart)

2012-12-02  KUBO Takehiro  <kubo@jiubao.org>
	* test/test_encoding.rb: fix to pass tests with ruby 2.0.0 preview2.

2012-11-11  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/lob.c: use OCILobLocatorAssign_nb (non-blocking version)
	    instead of OCILobLocatorAssign (blocking version).

2012-11-11  KUBO Takehiro  <kubo@jiubao.org>
	* NEWS: add changes between 2.1.3 and 2.1.2
	* VERSION: change the version to 2.1.3.
	* dist-files: append new files.
	* ruby-oci8.gemspec: declare license in the gem.

2012-11-11  KUBO Takehiro  <kubo@jiubao.org>
	* Makefile: add doc and copy-doc targets to generate document by yard command.
	* ext/oci8/oci8.c, ext/oci8/oci8.h, ext/oci8/oci8lib.c: change
	    protoptype definition of Init_oci8 for yard command to parse it.
	* ext/oci8/encoding.c, ext/oci8/oci8.c, ext/oci8/ocinumber.c,
	  lib/oci8.rb.in, lib/oci8/connection_pool.rb, lib/oci8/datetime.rb,
	  lib/oci8/encoding-init.rb, lib/oci8/metadata.rb, lib/oci8/object.rb,
	  lib/oci8/oci8.rb: change comments for yard command.

2012-11-11  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.h: update RB_GC_GUARD as ruby 1.9.2 defines.
	* test/test_break.rb: fix tests for rubinius 1.2.4 and 2.0.0.

2012-11-10  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8lib.c: fix compilation errors when ruby version is 1.8.x.
	* ext/oci8/ocinumber.c: Don't use rb_Rational() when rbx-2.0.testing
	    runs with ruby 1.8 mode.
	* lib/oci8/datetime.rb: fix #<NoMethodError: undefined method `timezone' for Time:Class>
	    when ruby is less than 1.9.2 and an object type's time attribute
	    is accessed.
	* test/config.rb, test/test_oci8.rb: for ruby 1.8.x.

2012-10-28  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb: Use rb_thread_call_without_gvl only when
	    ruby/thread.h exists. rb_thread_call_without_gvl is an internal